ardupilot_ws/logs/my_APMrover/build.make.075.log.stderr
/home/scp/iiit-delhi/Ardupilot-using-ROS/ardupilot_ws/src/my_APMrover/src/rover_P_control.cpp:116:5: error: expected unqualified-id before ‘else’
     else
     ^
/home/scp/iiit-delhi/Ardupilot-using-ROS/ardupilot_ws/src/my_APMrover/src/rover_P_control.cpp:125:5: error: expected unqualified-id before ‘while’
     while (ros::ok() && flag == 1)
     ^
/home/scp/iiit-delhi/Ardupilot-using-ROS/ardupilot_ws/src/my_APMrover/src/rover_P_control.cpp:132:5: error: ‘flag’ does not name a type
     flag=1;
     ^
/home/scp/iiit-delhi/Ardupilot-using-ROS/ardupilot_ws/src/my_APMrover/src/rover_P_control.cpp:133:3: error: expected declaration before ‘}’ token
   }
   ^
make[2]: *** [CMakeFiles/rover_P_control.dir/src/rover_P_control.cpp.o] Error 1
make[1]: *** [CMakeFiles/rover_P_control.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
make: *** [all] Error 2
